--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,9 @@ h1, h2, h3 {
   font-family: 'Droid Sans Mono'; font-size: 1em;
 }
 h1 {
-  color: var(--color-text-primary); font-size: 3em; line-height: 1;
+  color: var(--color-text-primary);
+  font-size: 3em;
+  line-height: 1;
 }
 h2 {
   color: var(--color-text-primary);
@@ -63,9 +65,10 @@ ul li:before {
   content: '+ ';
 }
 
+strong { color: var(--color-text-primary); }
 strong:before, strong:after { content: '**'; }
 em:before, em:after { content: '*'; }
-.comment { font-style: italic; }
+.comment { font-style: italic; color: var(--color-text-secondary); }
 .comment:before { content: '/* '; }
 .comment:after { content: ' */'; }
 code {
